--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,13 @@ if (NOT BUILD_NUMBER)
     set(BUILD_NUMBER 0)
 endif()
 
-set(PROJECT_VERSION_BASE 3.4.90)
 set(VERSION_MAJOR 3)
 set(VERSION_MINOR 4)
 set(VERSION_PATCH 90)
 set(VERSION_TWEAK ${BUILD_NUMBER})
 
-set(PROJECT_VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.${BUILD_NUMBER}")
+project(MellowPlayer VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.${BUILD_NUMBER}")
+
 set(SOURCE_DIR ${CMAKE_SOURCE_DIR})
 
 include(cmake/Macros.cmake)
