#291 QBS is deprecated: swich back to CMake
CI setup

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ tests:linux:
 
 deploy:linux:
     extends: .linux
-    stage: tests
+    stage: deploy
     dependencies:
         - build:linux
     script:
