--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,5 +44,6 @@ add_subdirectory(src/lib)
 add_subdirectory(src/main)
 add_subdirectory(src/plugins)
 if(BUILD_TESTS)
+    enable_testing()
     add_subdirectory(src/tests)
 endif()
