--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -19,4 +19,8 @@ if (UNIX AND NOT APPLE)
     add_integration_test(Mpris)
 endif()
 
+if(${ENABLE_COVERAGE} AND ${ENABLE_LCOV_REPORT})
+    setup_target_for_coverage(coverage "ctest" coverage)
+endif()
+
 add_custom_target(AllTests COMMAND ctest --output-on-failure DEPENDS ${ALL_TESTS})
