Moving to gitlab
CI Setup: try with Ubuntu 18.04 as a base

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
     - deploy
 
 .linux:
-    image: ubuntu:rolling
+    image: ubuntu:latest
     variables:
         DISPLAY: ':99.0'
         QT_QPA_PLATFORM: 'offscreen'
