Moving to gitlab
CI Setup: restore full matrix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
     - build
     - tests
     - deploy
+    - metrics
 
 .linux:
     image: ubuntu:latest
@@ -15,31 +16,31 @@ stages:
         - ./scripts/ci/linux/env-setup.sh
 
 
-#build:linux:
-#    extends: .linux
-#    stage: build
-#    script:
-#        - ./scripts/ci/linux/build.sh
-#    artifacts:
-#        name: "build"
-#        paths:
-#        - build
+build:linux:
+    extends: .linux
+    stage: build
+    script:
+        - ./scripts/ci/linux/build.sh
+    artifacts:
+        name: "build"
+        paths:
+        - build
 
 
-#tests:linux:
-#    extends: .linux
-#    stage: tests
-#    dependencies:
-#        - build:linux
-#    script:
-#        - ./scripts/ci/linux/tests.sh
-#
-#
-#tests:coverage:
-#    extends: .linux
-#    stage: tests
-#    script:
-#        - ./scripts/ci/linux/coverage.sh
+tests:linux:
+    extends: .linux
+    stage: tests
+    dependencies:
+        - build:linux
+    script:
+        - ./scripts/ci/linux/tests.sh
+
+
+metrics:coverage:
+    extends: .linux
+    stage: metrics
+    script:
+        - ./scripts/ci/linux/coverage.sh
 
 
 deploy:linux:
