Disable deploy stage for now
It does not work yet, I need to build the AppImage on an old linux distro (e.g CentOS7) with the official Qt binaries to get a very portable AppImage.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,22 +36,22 @@ tests:linux:
         - ./scripts/ci/linux/tests.sh
 
 
-metrics:coverage:
+coverage:
     extends: .linux
     stage: metrics
     script:
         - ./scripts/ci/linux/coverage.sh
 
 
-deploy:linux:
-    extends: .linux
-    stage: deploy
-    script:
-        - ./scripts/ci/linux/deploy.sh
-    artifacts:
-        name: "AppImage"
-        paths:
-            - MellowPlayer-x86_64.AppImage
+#deploy:linux:
+#    extends: .linux
+#    stage: deploy
+#    script:
+#        - ./scripts/ci/linux/deploy.sh
+#    artifacts:
+#        name: "AppImage"
+#        paths:
+#            - MellowPlayer-x86_64.AppImage
 
 pages:
     image: alpine:latest
