Moving to gitlab
remove github issue/pull request template (they have been copied in the gitlab settings)

--- a/scripts/ci/linux/build-image/Dockerfile
+++ b/scripts/ci/linux/build-image/Dockerfile
@@ -11,3 +11,6 @@ COPY install-qt.sh /
 RUN chmod +x /install-qt.sh
 RUN chmod +x /extract-qt-installer
 RUN /install-qt.sh
+RUN yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+RUN yum -y install cmake3
+RUN ln -s /usr/bin/cmake3 /usr/bin/cmake
