Moving to gitlab
CI Setup: use own docker image (CentOS 7 base with latest official qt binaries)

--- a/scripts/ci/linux/build-image/Dockerfile
+++ b/scripts/ci/linux/build-image/Dockerfile
@@ -20,3 +20,12 @@ RUN yum -y install devtoolset-7-gcc-c++
 RUN ls /opt/rh/devtoolset-7/root/bin
 RUN ln -s /opt/rh/devtoolset-7/root/bin/gcc /usr/bin/gcc --force
 RUN ln -s /opt/rh/devtoolset-7/root/bin/g++ /usr/bin/g++ --force
+RUN ln -s /opt/rh/devtoolset-7/root/bin/cc /usr/bin/cc --force
+RUN ln -s /opt/rh/devtoolset-7/root/bin/c++ /usr/bin/c++ --force
+RUN ln -s /opt/rh/devtoolset-7/root/bin/cpp /usr/bin/cpp --force
+RUN ln -s /opt/rh/devtoolset-7/root/bin/gcov /usr/bin/gcov --force
+RUN ln -s /opt/rh/devtoolset-7/root/bin/strip /usr/bin/strip --force
+RUN ln -s /opt/rh/devtoolset-7/root/bin/objcopy /usr/bin/objcopy --force
+RUN ln -s /usr/bin/ctest3 /usr/bin/ctest
+RUN yum -y install libXcomposite libXcursor libXrender libX11-xcb libXi libXtst libXrandr
+RUN yum -y install alsa-lib mesa-libEGL
