--- a/scripts/settings/schema.json.in
+++ b/scripts/settings/schema.json.in
@@ -41,7 +41,15 @@
 					"default": 0,
 					"key": "update-channel",
 					"enabled": "main/check-for-updates"
-				}
+				},
+                {
+                    "name": "Playback requires user gesture",
+                    "tooltip": "Inhibits playback of media content until the user interacts with the page.",
+                    "type": "bool",
+                    "default": false,
+                    "key": "playback-requires-user-gesture",
+                    "enabled": "qtVersion >= 5.11"
+                }
 			]
 		},
 		{
