Moving to gitlab
CI Setup: test if possible to run windows docker on gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,11 @@ stages:
     tags:
         - linux
 
+.windows:
+    image: windows/servercore:ltsc201
+    tags:
+        - windows
+
 
 build:linux:
     extends: .linux
@@ -23,6 +28,11 @@ build:linux:
             - build
             - appdir
 
+build:windows:
+    extends: .windows
+    stage: build
+    script:
+        - dir
 
 tests:linux:
     extends: .linux
