--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,8 @@ platform:
 
 environment:
     QTDIR: C:\Qt\5.11
-    PATH: %QTDIR%\bin;%QTDIR%\lib;%PATH%
-    CMAKE_PREFIX_PATH: %QTDIR%
+    PATH: $QTDIR\bin;$QTDIR\lib;$PATH
+    CMAKE_PREFIX_PATH: $QTDIR
 
 configuration:
     - Release
