Moving to gitlab
Try to deployment to BinTray

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -31,7 +31,7 @@ deploy:
       subject: colinduquesnoy
       repo: MellowPlayer
       package: WindowsInstaller
-      version: version
+      version: "{version}"
       publish: true
       override: true
       explode: true
