--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
     - build
     - tests
+    - package
     - deploy
 
 .linux:
@@ -40,17 +41,26 @@ tests:coverage:
         - ./scripts/ci/linux/coverage.sh
 
 
-AppImage:
+appimage:
     extends: .linux
-    stage: deploy
+    stage: package
     script:
-        - ./scripts/ci/linux/deploy.sh
+        - ./scripts/ci/linux/package.sh
     dependencies:
         - build:linux
     artifacts:
         name: "AppImage"
         paths:
             - MellowPlayer-x86_64.AppImage
+
+deploy:linux:
+    image: alpine:latest
+    stage: deploy
+    dependencies:
+        - appimage
+    script:
+        - apk add --no-cache curl
+        - curl -T MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} https://api.bintray.com/content/colinduquesnoy/MellowPlayer/AppImage/3.4.90.${CI_PIPELINE_IID}/MellowPlayer-x86_64.AppImage
 
 pages:
     image: alpine:latest
