--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
-version: "3.4.90.{build}"
+version: 3.4.90.{build}
 
 os: Visual Studio 2017
 
@@ -31,7 +31,7 @@ deploy:
       subject: colinduquesnoy
       repo: MellowPlayer
       package: WindowsInstaller
-      version: "{version}"
+      version: 3.4.90.{build}
       publish: true
       override: true
       explode: true
