--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,6 +7,8 @@ platform:
 
 environment:
     QTDIR: C:\Qt\5.11\msvc2017_64
+    BINTRAY_API_KEY:
+        secure: 5JxFMiIEPLEzENmBD2AV6eOfA7+9kTfh276P91CoijHfboWrdgvpvci9vuiOxXRa
 
 configuration:
     - Release
@@ -23,32 +25,10 @@ test_script:
     - cd C:\projects\MellowPlayer\scripts\ci\windows
     - tests.bat
 
-deploy:
-    - provider: BinTray
-      username: colinduquesnoy
-      api_key:
-          secure: 5JxFMiIEPLEzENmBD2AV6eOfA7+9kTfh276P91CoijHfboWrdgvpvci9vuiOxXRa
-      subject: colinduquesnoy
-      repo: MellowPlayer
-      package: Continuous
-      publish: true
-      override: true
-      explode: true
-      on:
-          branch: master
 
-    - provider: BinTray
-      username: colinduquesnoy
-      api_key:
-          secure: 5JxFMiIEPLEzENmBD2AV6eOfA7+9kTfh276P91CoijHfboWrdgvpvci9vuiOxXRa
-      subject: colinduquesnoy
-      repo: MellowPlayer
-      package: Stable
-      publish: true
-      override: true
-      explode: true
-      on:
-        APPVEYOR_REPO_TAG: true
+deploy_script:
+    - cd C:\projects\MellowPlayer\scripts\ci\windows
+    - if defined APPVEYOR_REPO_TAG_NAME (upload-stable.bat) else (upload-continous.bat)
 
 artifacts:
     - path: MellowPlayer_Setup.exe
