--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
     - deploy
 
 variables:
-    SHORT_VERSION: '3.4.90'
+    FULL_VERSION: '3.4.90.${CI_PIPELINE_IID}'
 
 .linux:
     image: registry.gitlab.com/colinduquesnoy/mellowplayer/build-images/linux:latest
@@ -65,7 +65,7 @@ deploy:continuous:
         - appimage
     script:
         - apk add --no-cache curl
-        - curl -T MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Continuous/${SHORT_VERSION}.${CI_PIPELINE_IID}/continuous/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=1
+        - curl -T ./MellowPlayer-x86_64.appimage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Continuous/${FULL_VERSION}/continuous/${FULL_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
 
 deploy:stable:
     image: alpine:latest
@@ -76,7 +76,7 @@ deploy:stable:
         - appimage
     script:
         - apk add --no-cache curl
-        - curl -T MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${SHORT_VERSION}.${CI_PIPELINE_IID}/${SHORT_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=1
+        - curl -T ./MellowPlayer-x86_64.appimage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${FULL_VERSION}/stable/${FULL_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
 
 pages:
     image: alpine:latest
