--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,9 +65,7 @@ deploy:continuous:
         - appimage
     script:
         - apk add --no-cache curl
-        - pwd
-        - ls
-        - curl -T ./MellowPlayer-x86_64.appimage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Continuous/${FULL_VERSION}/continuous/${FULL_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
+        - curl -T ./MellowPlayer-x86_64.Appimage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Continuous/${FULL_VERSION}/continuous/${FULL_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
 
 deploy:stable:
     image: alpine:latest
@@ -78,7 +76,7 @@ deploy:stable:
         - appimage
     script:
         - apk add --no-cache curl
-        - curl -T ./MellowPlayer-x86_64.appimage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${FULL_VERSION}/stable/${FULL_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
+        - curl -T ./MellowPlayer-x86_64.Appimage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${FULL_VERSION}/stable/${FULL_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
 
 pages:
     image: alpine:latest
