--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
-version: 3.4.91.{build}
+version: 3.4.90.{build}
 
 os: Visual Studio 2017
 
@@ -7,6 +7,7 @@ platform:
 
 environment:
     QTDIR: C:\Qt\5.11\msvc2017_64
+    APP_VERSION: 3.4.90
     BINTRAY_API_KEY:
         secure: 5JxFMiIEPLEzENmBD2AV6eOfA7+9kTfh276P91CoijHfboWrdgvpvci9vuiOxXRa
 
