--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
     - deploy
 
 variables:
-    FULL_VERSION: '3.4.91.${CI_PIPELINE_IID}'
+    APP_VERSION: '3.4.90'
 
 .linux:
     image: registry.gitlab.com/colinduquesnoy/mellowplayer/build-images/linux:latest
@@ -65,7 +65,7 @@ deploy:continuous:
         - appimage
     script:
         - apk add --no-cache curl
-        - curl -T ./MellowPlayer-x86_64.Appimage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Continuous/${FULL_VERSION}/continuous/${FULL_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
+        - curl -T ./MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Continuous/${APP_VERSION}/continuous/${APP_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
 
 deploy:stable:
     image: alpine:latest
@@ -76,7 +76,7 @@ deploy:stable:
         - appimage
     script:
         - apk add --no-cache curl
-        - curl -T ./MellowPlayer-x86_64.Appimage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${FULL_VERSION}/stable/${FULL_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
+        - curl -T ./MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${APP_VERSION}/stable/${APP_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
 
 pages:
     image: alpine:latest
