Moving to gitlab
Ci Setup: codecov integration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,10 @@ tests:coverage:
     stage: tests
     script:
         - ./scripts/ci/linux/coverage.sh
+    after_script:
+        - yum -y install curl
+        - bash <(curl -s https://codecov.io/bash) -t "${CODECOV_TOKEN}" -f build/coverage.info.cleaned
+
 
 
 appimage:
