--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -6,7 +6,7 @@ file(GLOB_RECURSE TS_FILES languages/*.ts)
 if (UPDATE_TRANSLATIONS)
     message(STATUS "Update translations")
     # update source only, pushing to transifex will update all other languages
-    set(TRANSLATION_DIRS ${CMAKE_SOURCE_DIR}/src/lib ${CMAKE_SOURCE_DIR}/src/imports)
+    set(TRANSLATION_DIRS ${CMAKE_SOURCE_DIR}/src/lib)
     qt5_create_translation(QM_FILES ${TRANSLATION_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/languages/MellowPlayer_en.ts OPTIONS -noobsolete)
 endif()
 qt5_add_translation(QM_FILES ${TS_FILES})
