Migrate links from github to gitlab
Now it should be good.

--- a/scripts/settings/schema.json.in
+++ b/scripts/settings/schema.json.in
@@ -258,7 +258,7 @@
 				},
                 {
                   "name": "Report Issue",
-                  "tooltip": "Create an issue on github",
+                  "tooltip": "Report an issue",
                   "type": "shortcut",
                   "default": "F4",
                   "key": "report-issue"
