--- a/src/plugins/web/youtube/metadata.ini
+++ b/src/plugins/web/youtube/metadata.ini
@@ -1,5 +1,5 @@
 author=Colin Duquesnoy
-author_website=https://github.com/ColinDuquesnoy
+author_website=https://gitlab.com/ColinDuquesnoy
 icon=logo.svg
 name=Youtube
 supported_platforms=All
