--- a/.codecov.yml
+++ b/.codecov.yml
@@ -14,7 +14,12 @@ coverage:
                 target: auto
                 threshold: 5
                 base: auto
-        patch: yes
+        patch:
+            default:
+                # basic
+                target: auto
+                threshold: 5
+                base: auto
         changes: no
 
 parsers:
