--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,8 +92,8 @@ deploy:stable:
         - appimage
     script:
         - apk add --no-cache curl
-        - curl -T ./MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${APP_VERSION}/stable/${APP_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
-        - curl -T ./MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${APP_VERSION}/stable/latest/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
+        - curl -v -T ./MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${APP_VERSION}/stable/${APP_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
+
 
 pages:
     image: alpine:latest
