--- a/src/plugins/youtube-music/metadata.ini
+++ b/src/plugins/youtube-music/metadata.ini
@@ -1,7 +1,7 @@
 author=Nicolas Guilloux
 author_website=https://nicolasguilloux.eu/
 icon=logo.svg
-name=Youtube Music Tmp
+name=Youtube Music
 supported_platforms=All
 url=https://music.youtube.com/
 version=1.0.1
