--- a/src/plugins/youtube/metadata.ini
+++ b/src/plugins/youtube/metadata.ini
@@ -1,7 +1,7 @@
 author=Colin Duquesnoy
 author_website=https://gitlab.com/ColinDuquesnoy
 icon=logo.svg
-name=YoutubeTmp
+name=Youtube
 supported_platforms=All
 url=https://youtube.com
 version=1.0.1
