--- a/com.gitlab.ColinDuquesnoy.MellowPlayer.yml
+++ b/com.gitlab.ColinDuquesnoy.MellowPlayer.yml
@@ -7,6 +7,13 @@ finish-args:
   - --share=ipc
   - --socket=x11
   - --socket=wayland
+  - --share=network
+  - --socket=pulseaudio
+  - --device=dri
+  - --socket=session-bus
+  - --socket=system-bus
+rename-desktop-file: "mellowplayer.desktop"
+rename-icon: "mellowplayer"
 modules:
   - name: libnotify
     cleanup:
