--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,6 @@ build:debug:
         paths:
             - build
 
-
 tests:
     extends: .linux
     stage: tests
@@ -64,13 +63,28 @@ appimage:
     extends: .linux
     stage: package
     script:
-        - ./scripts/ci/linux/package.sh
+        - scripts/packaging/make_appimage.sh  ${CMAKE_PREFIX_PATH}
     dependencies:
         - build:release
     artifacts:
         name: "AppImage"
         paths:
             - MellowPlayer-x86_64.AppImage
+
+flatpak:
+    image: fedora:latest
+    tags:
+        - linux
+    stage: package
+    script:
+        - ./scripts/ci/linux/fedora-env-setup.sh
+        - ./scripts/packaging/make-flatpak.sh
+#    only:
+#        - tags
+    artifacts:
+        name: "Flatpak"
+        paths:
+            - MellowPlayer.flatpak
 
 deploy:continuous:
     image: alpine:latest
@@ -90,10 +104,11 @@ deploy:stable:
         - tags
     dependencies:
         - appimage
+        - flatpak
     script:
         - apk add --no-cache curl
         - curl -v -T ./MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${APP_VERSION}/stable/${APP_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
-
+        - curl -v -T ./MellowPlayer.flatpak -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Stable/${APP_VERSION}/stable/${APP_VERSION}/MellowPlayer.flatpak?publish=1&override=1&explode=0"
 
 pages:
     image: alpine:latest
