--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ stages:
 variables:
     APP_VERSION: '3.5.2'
 
-
 .linux:
     image: registry.gitlab.com/colinduquesnoy/mellowplayer/build-images/linux:latest
     variables:
@@ -15,7 +14,6 @@ variables:
         CMAKE_PREFIX_PATH: '/opt/qt/5.11.2/gcc_64'
     tags:
         - linux
-
 
 build:release:
     extends: .linux
@@ -46,7 +44,6 @@ tests:
     script:
         - ./scripts/ci/linux/tests.sh
 
-
 coverage:
     extends: .linux
     stage: tests
@@ -57,7 +54,6 @@ coverage:
     after_script:
         - yum -y install curl
         - bash <(curl -s https://codecov.io/bash) -t "${CODECOV_TOKEN}" -f build/coverage.info.cleaned
-
 
 appimage:
     extends: .linux
@@ -73,14 +69,14 @@ appimage:
 
 flatpak:
     image: fedora:latest
+    stage: package
     tags:
         - linux
-    stage: package
+    before_script:
+        - ./scripts/ci/linux/fedora-flatpak-env-setup.sh
+        - patch com.gitlab.ColinDuquesnoy.MellowPlayer.yml scripts/ci/linux/flatpak-build-local-sources.patch
     script:
-        - ./scripts/ci/linux/fedora-env-setup.sh
         - ./scripts/packaging/make-flatpak.sh
-#    only:
-#        - tags
     artifacts:
         name: "Flatpak"
         paths:
@@ -93,9 +89,11 @@ deploy:continuous:
         - master@ColinDuquesnoy/MellowPlayer
     dependencies:
         - appimage
+        - flatpak
     script:
         - apk add --no-cache curl
         - curl -T ./MellowPlayer-x86_64.AppImage -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Continuous/${APP_VERSION}/continuous/${APP_VERSION}/MellowPlayer-x86_64.AppImage?publish=1&override=1&explode=0"
+        - curl -T ./MellowPlayer.flatpak -ucolinduquesnoy:${BINTRAY_API_KEY} "https://api.bintray.com/content/colinduquesnoy/MellowPlayer/Continuous/${APP_VERSION}/continuous/${APP_VERSION}/MellowPlayer.flatpak?publish=1&override=1&explode=0"
 
 deploy:stable:
     image: alpine:latest
