--- a/com.gitlab.ColinDuquesnoy.MellowPlayer.yml
+++ b/com.gitlab.ColinDuquesnoy.MellowPlayer.yml
@@ -12,6 +12,7 @@ finish-args:
   - --device=dri
   - --socket=session-bus
   - --socket=system-bus
+  - --filesystem=/tmp
 rename-desktop-file: "mellowplayer.desktop"
 rename-icon: "mellowplayer"
 modules:
