Amazon music: require DRM and proprietary codecs
Adapt suported platform: it will not work with our AppImage and Windows Installer

Close #323

--- a/src/plugins/amazon music/metadata.ini
+++ b/src/plugins/amazon music/metadata.ini
@@ -2,6 +2,6 @@ author=mogreator
 author_website=none
 icon=logo.svg
 name=amazon music
-supported_platforms=All
+supported_platforms=Linux
 url=https://music.amazon.com
 version=1.0
