Update Brain.fm URL
Avoid the login page and go directly to the app.

--- a/src/plugins/brainfm/metadata.ini
+++ b/src/plugins/brainfm/metadata.ini
@@ -3,5 +3,5 @@ author_website=https://schnouki.net
 icon=logo.svg
 name=Brain.fm
 supported_platforms=All
-url=https://brain.fm
+url=https://brain.fm/app
 version=1.0
