--- a/.codecov.yml
+++ b/.codecov.yml
@@ -14,12 +14,7 @@ coverage:
                 target: auto
                 threshold: 5
                 base: auto
-        patch:
-            default:
-                # basic
-                target: auto
-                threshold: 5
-                base: auto
+        patch: no
         changes: no
 
 parsers:
