MellowPlayer.Connect Integration UI
Still using fake implemenation (nothing is installed/started yet)

See #332

--- a/src/lib/infrastructure/CMakeLists.txt
+++ b/src/lib/infrastructure/CMakeLists.txt
@@ -9,6 +9,7 @@ configure_file(resources/PluginTemplate/integration.js ${CMAKE_CURRENT_BINARY_DI
 configure_file(resources/PluginTemplate/metadata.ini ${CMAKE_CURRENT_BINARY_DIR}/resources/PluginTemplate/metadata.ini)
 configure_file(resources/PluginTemplate/theme.json ${CMAKE_CURRENT_BINARY_DIR}/resources/PluginTemplate/theme.json)
 configure_file(resources/PluginTemplate/logo.svg ${CMAKE_CURRENT_BINARY_DIR}/resources/PluginTemplate/logo.svg)
+configure_file(resources/images/mellowplayer-connect.svg ${CMAKE_CURRENT_BINARY_DIR}/resources/images/mellowplayer-connect.svg)
 
 configure_file(src/MellowPlayer/Infrastructure/BuildConfig.cpp.in ${CMAKE_BINARY_DIR}/BuildConfig.cpp)
 
